2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation issues.

	* apps/papers/levillain.09.ismm/graph.cc: Fix wrong changes.

	* doc/examples/tuto4_genericity_and_algorithms.cc: Add a missing
	include.

2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve tests for literal classes.

	* tests/literal/Makefile.am: Update targets.

	* tests/literal/colors.cc,
	* tests/literal/identity.cc,
	* tests/literal/max.cc,
	* tests/literal/min.cc,
	* tests/literal/origin.cc: New.

	* tests/literal/medium_gray.cc: Make a real test.

2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation with multiple files.

	* mln/canvas/browsing/backdiagonal2d.hh,
	* mln/canvas/browsing/breadth_first_search.hh,
	* mln/canvas/browsing/depth_first_search.hh,
	* mln/canvas/browsing/diagonal2d.hh,
	* mln/canvas/browsing/dir_struct_elt_incr_update.hh,
	* mln/canvas/browsing/directional.hh,
	* mln/canvas/browsing/fwd.hh,
	* mln/canvas/browsing/hyper_directional.hh,
	* mln/canvas/browsing/snake_fwd.hh,
	* mln/canvas/browsing/snake_generic.hh,
	* mln/canvas/browsing/snake_vert.hh,
	* mln/fun/v2v/hsi_to_rgb.hh,
	* mln/fun/v2v/rgb_to_hsi.hh,
	* mln/fun/v2v/rgb_to_hsl.hh,
	* mln/literal/black.hh,
	* mln/literal/colors.hh,
	* mln/literal/grays.hh,
	* mln/literal/max.hh,
	* mln/literal/min.hh,
	* mln/literal/white.hh: Add missing inline keyword and
	MLN_WO_GLOBAL_VARS guards.

2011-11-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Add two variants of the threshold function.

	* apps/papers/levillain.09.ismm/graph.cc,
	* doc/examples/tuto4_genericity_and_algorithms.cc,
	* mln/binarization/threshold.hh,
	* mln/fun/v2b/all.hh,
	* mln/fun/v2b/essential.hh,
	* mln/world/binary_2d/enlarge.hh,
	* tests/labeling/n_max.cc: Update includes and use of threshold
	function.

	* mln/fun/v2b/threshold.hh: Replaced...

	* mln/fun/v2b/threshold_ge.hh,
	* mln/fun/v2b/threshold_le.hh: ... by these files.

	* tests/unit_test/unit-tests.mk: Regen.

2011-11-21  Guillaume Lazzara  <z@lrde.epita.fr>
